infra/k8s/referit-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: referit-backend-deployment
  namespace: referit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: referit-backend
  template:
    metadata:
      labels:
        app: referit-backend
    spec:
      containers:
      - name: referit-backend
        image: masterchief01/referit-backend:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 5001
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: referit-backend-service
  namespace: referit
spec:
  selector:
    app: referit-backend
  ports:
  - name: http
    port: 5001
    targetPort: 5001
