infra/k8s/referit-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: referit-frontend-deployment
  namespace: referit
  labels:
    app: referit-frontend
spec:
  selector:
    matchLabels:
      app: referit-frontend
  template:
    metadata:
      labels:
        app: referit-frontend
    spec:
      containers:
      - name: referit-frontend
        image: masterchief01/referit-frontend:latest
        ports:
        - containerPort: 3001
        imagePullPolicy: Always
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: referit-frontend-service
# spec:
#   selector:
#     app: referit-frontend
#   ports:
#   - name: http
#     port: 3001
#     targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: referit-frontend-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3001
  selector:
    app: referit-frontend
