infra/k8s/referit-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: referit-ingress
  namespace: referit
  labels:
    name: referit-ingress
spec:
  rules:
  - host: referit.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: referit-frontend-service
            port: 
              number: 3000
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: referit-backend-service
            port: 
              number: 3001
